# ysImageProcessing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  main.cpp
include/: ysImage.h
include/Arithmetic/: ImageArithmetic.h
include/Color/: Color.h  HSL.h  RGB.h  RGBA.h
include/ConvolutionFilter/: ConvolutionFilter.h  SoftenFilter.h
include/ConvolutionFilter/Blur/: Blur3x3.h  Blur5x5.h
include/ConvolutionFilter/Blur/MotionBlur/: MotionBlur.h  MotionBlurLeftToRight.h  MotionBlurRightToLeft.h
include/ConvolutionFilter/EdgeDetection/: EdgeDetection45Degree.h  EdgeDetectionTopLeftBottomRight.h  HorizontalEdgeDetection.h  VerticalEdgeDetection.h
include/ConvolutionFilter/Emboss/: Emboss.h  Emboss45Degree.h  EmbossTopLeftBottomRight.h  IntenseEmboss.h
include/ConvolutionFilter/Gaussian/: Gaussian3x3.h  Gaussian5x5.h  Gaussian7x7.h
include/ConvolutionFilter/HighPass/: HighPass3x3.h
include/ConvolutionFilter/Kirsch/: Kirsch3x3Horizontal.h  Kirsch3x3Vertical.h
include/ConvolutionFilter/Laplacian/: Laplacian3x3.h  Laplacian5x5.h  LaplacianOfGaussian.h
include/ConvolutionFilter/LowPass/: LowPass3x3.h  LowPass5x5.h
include/ConvolutionFilter/Mean/: Mean3x3.h  Mean5x5.h  Mean7x7.h  Mean9x9.h
include/ConvolutionFilter/Prewitt/: Prewitt3x3Horizontal.h  Prewitt3x3Vertical.h
include/ConvolutionFilter/Sharpen/: IntenseSharpen.h  Sharpen3x3.h  Sharpen3x3Factor.h  Sharpen5x5.h  SharpenFilter.h
include/ConvolutionFilter/Sobel/: Sobel3x3Horizontal.h  Sobel3x3Vertical.h
include/Effect/: Brightness.h  Contrast.h  Effect.h  Gamma.h  Greyscale.h  Hue.h  Invert.h  Sepia.h  Threshold.h  Vibrance.h
nbproject/: configurations.xml  project.properties  project.xml
src/: ysImage.cpp
src/Arithmetic/: ImageArithmetic.cpp
src/Color/: HSL.cpp  RGB.cpp  RGBA.cpp
src/ConvolutionFilter/: SoftenFilter.cpp
src/ConvolutionFilter/Blur/: Blur3x3.cpp  Blur5x5.cpp
src/ConvolutionFilter/Blur/MotionBlur/: MotionBlur.cpp  MotionBlurLeftToRight.cpp  MotionBlurRightToLeft.cpp
src/ConvolutionFilter/EdgeDetection/: EdgeDetection45Degree.cpp  EdgeDetectionTopLeftBottomRight.cpp  HorizontalEdgeDetection.cpp  VerticalEdgeDetection.cpp
src/ConvolutionFilter/Emboss/: Emboss.cpp  Emboss45Degree.cpp  EmbossTopLeftBottomRight.cpp  IntenseEmboss.cpp
src/ConvolutionFilter/Gaussian/: Gaussian3x3.cpp  Gaussian5x5.cpp  Gaussian7x7.cpp
src/ConvolutionFilter/HighPass/: HighPass3x3.cpp
src/ConvolutionFilter/Kirsch/: Kirsch3x3Horizontal.cpp  Kirsch3x3Vertical.cpp
src/ConvolutionFilter/Laplacian/: Laplacian3x3.cpp  Laplacian5x5.cpp  LaplacianOfGaussian.cpp
src/ConvolutionFilter/LowPass/: LowPass3x3.cpp  LowPass5x5.cpp
src/ConvolutionFilter/Mean/: Mean3x3.cpp  Mean5x5.cpp  Mean7x7.cpp  Mean9x9.cpp
src/ConvolutionFilter/Prewitt/: Prewitt3x3Horizontal.cpp  Prewitt3x3Vertical.cpp
src/ConvolutionFilter/Sharpen/: IntenseSharpen.cpp  Sharpen3x3.cpp  Sharpen3x3Factor.cpp  Sharpen5x5.cpp  SharpenFilter.cpp
src/ConvolutionFilter/Sobel/: Sobel3x3Horizontal.cpp  Sobel3x3Vertical.cpp
src/Effect/: Brightness.cpp  Contrast.cpp  Effect.cpp  Gamma.cpp  Greyscale.cpp  Hue.cpp  Invert.cpp  Sepia.cpp  Threshold.cpp  Vibrance.cpp
